2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* mklangreg.pl: New script.

	* Makefile: Updated for creation of the module for language subtag
	registry.
	
2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: WebIDL.html added.

	* WebIDL.pod: New documentation.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Checker's error types are redefined.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Parser's error types are redefined.  Some forward
	compatible parsing bugs are fixed.  Some unreachable codes are
	commented out.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Support for the reminding extended attributes are
	added.  It does not satisfy the definition that a forward
	interface declaration has an extended attribute.  It seems that
	unless explicitly allowed multiple extended attributes with the
	same name is not allowed, though it is not explicitly mentioned in
	the spec.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Unescapes extended attribute names and extended
	attribute identifiers.  Preserve whether an extended attribute has
	an argument list of not.  Support for extended attributes:
	Constructor, ExceptionConsts, IndexGetter, IndexSetter,
	NameGetter, NameSetter, and Null.
	(has_argument_list): New attribute.
	(idl_text): Stringifies argument lists, if any, even if it is
	empty.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: New state |PCDATA_STATE|.  Use an empty string for
	|{s_kwd}| in DATA_STATE as default.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: Replace |{prev_char}|
	by |{s_kwd}| in DATA_STATE.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Shorten keys.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove checking for control character, surrogate
	pair, or noncharacter code points and non-Unicode code
	points (they should be handled by Whatpm::Charset::UnicodeChecker).