@@ -1,5 +1,9 @@
 2008-09-18  Wakaba  <wakaba@suika.fam.cx>
 
+	* LangTag.pm (check_rfc4646_langtag): New method.
+
+2008-09-18  Wakaba  <wakaba@suika.fam.cx>
+
 	* mklangreg.pl: New script.
 
 	* Makefile: Updated for creation of the module for language subtag
